--- a/index.html
+++ b/index.html
@@ -4,22 +4,26 @@
 <head>
     <title>SEQ Weather Today</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
     <header><strong>SEQ Weather Today</strong></header>
 
 <div class="topnav">
-    <a class="active" href="home.html">Home</a>
-    <a href="goldcoast.html">Gold Coast</a>
-    <a href="brisbane.html">Brisbane</a>
-    <a href="sunshinecoast.html">Sunshine Coast</a>
+    <a class="active" href="index.html">Home</a>
+    <a href="goldcoast.php">Gold Coast</a>
+    <a href="brisbane.php">Brisbane</a>
+    <a href="sunshinecoast.php">Sunshine Coast</a>
 </div>
 
 <body>
-    <p>This is the Home page</p>
-    <img src="temp.png">
+    <p1>Welcome to SEQ Weather Today</p1>
+    <p>Here you can view the weather of South East Queensland for today and how the weather has changed throughout the day.</p>
+    <p>All data has been gathered from the Bureau of Meteorology.</p>
+    <br>
+    <p>Navigate to the city you would like to view the weather of using the Navigation Bar above</p>
+    <br>
     <br>
     <button onclick="window.location.href='http://bom.gov.au'">Click here to go to BOM</button>
-    <a href="response_bne.txt" download><button type="button">View raw data</button></a>
 </body>
 </html>
